--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="title"><h1>  SILVANA, PULE!!</h1></div>
       <img src="https://github.com/bryansilvacm/bsjump/blob/main/pipe.png?raw=true" alt="tubo do jogo" class="pipe" />
       <img
-        src="https://scontent.fbau3-2.fna.fbcdn.net/v/t31.18172-8/19983448_464256013932315_2612906955835448293_o.jpg?_nc_cat=105&ccb=1-7&_nc_sid=7b2446&_nc_eui2=AeFzwI7eSdmcITQo480wBaJm97CjzYQdUFr3sKPNhB1QWr09ujElbBoewtmuN0OaRGre4STHD-S4y9k1BxBMM2GB&_nc_ohc=_d4rTmMjro4Q7kNvgFfdvrn&_nc_ht=scontent.fbau3-2.fna&oh=00_AYCfpb9EfGJoUuibxmeXz4eHogHjOTs8IdWS25rjQEPRew&oe=66B0AB4E" class="mario"
+        src="https://i.pinimg.com/280x280_RS/76/a9/34/76a934078def6c32e0c331af5daff159.jpg" class="mario"
       />
     </div>
     <script src="script.js"></script>
