--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="game-board">
-      <div class="title"><h1>  SILVANA, PULE!!</h1></div>
+      <div class="title"><h1>  WALTINHO, PULE!!</h1></div>
       <img src="https://github.com/bryansilvacm/bsjump/blob/main/pipe.png?raw=true" alt="tubo do jogo" class="pipe" />
       <img
         src="https://i.pinimg.com/280x280_RS/76/a9/34/76a934078def6c32e0c331af5daff159.jpg" class="mario"
