--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mario Jump</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Pulando a Cerca</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+
+   <img src="C:\Users\Caixa\Downloads\here\JUMP\fundo.png" id="fundo">
     <div class="game-board">
-      <div class="title"><h1>  WALTINHO, PULE!!</h1></div>
-      <img src="https://github.com/bryansilvacm/bsjump/blob/main/pipe.png?raw=true" alt="tubo do jogo" class="pipe" />
-      <img
-        src="https://i.pinimg.com/280x280_RS/76/a9/34/76a934078def6c32e0c331af5daff159.jpg" class="mario"
-      />
+      <div class="title"><h1>  Cuidado com a Cerca, PULE!!</h1></div>
+      <img src="C:\Users\Caixa\Downloads\here\JUMP\cerca.png" alt="cerca do jogo" class="cerca" />
+      <img src="C:\Users\Caixa\Downloads\here\JUMP\avatar.mp4" class="avatar"/>
     </div>
     <script src="script.js"></script>
   </body>
